MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/Broker_Registration__c.object-meta.xml
<CustomObject>
    <label>Broker Registration</label>
    <nameField>
        <displayFormat>BR-{000000}</displayFormat>
        <label>Broker Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>