MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Registrations</relationshipLabel>
    <relationshipName>Broker_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>