MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Broker Registrations</relationshipLabel>
    <relationshipName>Broker_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>