MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Broker_User__c.field-meta.xml
<CustomField>
    <fullName>Broker_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>