MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Business_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Business_Relationship__c</fullName>
    <label>Business Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>