MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>