MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Mailing_Address_Line__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Address Line</label>
    <length>250</length>
    <type>Text</type>
</CustomField>