MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Country</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>