MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Postal Code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>