MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>