MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supplier Email</label>
    <type>Email</type>
</CustomField>