MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supplier Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>