MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Number__c</fullName>
    <label>Supplier Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>