MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Type__c</fullName>
    <label>Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real Estate Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>