MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/fields/Unified_Number__c.field-meta.xml
<CustomField>
    <fullName>Unified_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unified Number</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>