MODON MRE BPDEV/force-app/main/default/objects/Broker_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Broker_Account__c</columns>
    <columns>Mobile__c</columns>
    <columns>Status__c</columns>
    <columns>Supplier_Email__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Supplier_Number__c</columns>
    <columns>Supplier_Type__c</columns>
    <columns>Unified_Number__c</columns>
    <columns>Broker_Contact__c</columns>
    <columns>Email__c</columns>
    <columns>Broker_User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>